[package]
name = "dharma"
version = "0.1.0"
authors = ["sushrutshivaswamy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subway = "0.1.0"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
buffered_offset_reader = "0.6.0"
log = "0.4.14"