[package]
name = "dharma"
version = "0.1.0"
authors = ["sushrutshivaswamy"]
repository = "https://github.com/sushrut141/DharmaDB"
description = """
Persistent, fault tolerant key-value store written in Rust.
"""
edition = "2018"

[dependencies]
subway = "0.1.2"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
buffered_offset_reader = "0.6.0"
log = "0.4.14"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "dharma_test"
harness = false